# google_api_poc

./: .gitignore  README.md  get_email_by_id.py  get_email_ids.py  pyproject.toml
